Create base camera JS

--- a/index.html
+++ b/index.html
@@ -5,9 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" href="assets/styles/css/main.min.css">
+    <link rel="stylesheet" href="assets/styles/css/main.css">
 </head>
 <body>
-    <h1>test</h1>
+
+    <div class="box w-100vw h-100vh align-center justify-center">
+        <video src="" style="width: 500px; height: 500px;" data-camera-video></video>
+        <select name="" data-camera-select id=""></select>
+        <button data-camera-start>start</button>
+        <button data-camera-stop>stop</button>
+    </div>
+
+
+    <!-- JQ -->
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+
+    <!-- Main JS -->
+    <script src="assets/scripts/main.js"></script>
 </body>
 </html>
